  .----------------------.
--|   X-Chat ChangeLog   |--------------------------------------------
  `----------------------'

----------------------------------------------------------------------
 2.0.5
----------------------------------------------------------------------

 - Updated translations (ca, fi, lt, nl, sk, sv).
 - Fixed detection of Python 2.3 in configure script (anonymous).
 - DCC Send file-selection dialog now supports multi-select.
 - Reset away status after auto-reconnect from a ping timeout.
 - Perl: Fixed IRC::user_info always matching the first entry.
 - More C89 fixes for non-gcc compilers (Albert Chin). [781809].
 - xtext: now double buffered and flicker free. Also some efficiency
   tweaks for exposure events and multi-wrapped lines.
 - Removed buggy numeric 338 support [783945].
 - Nick completion in dialogs and channel completion (Jay Cornwall).
 - Print informative error messages when dcc resume isn't possible.
 - Fixed performance of dcc recv, send and chat windows.
 - Fixed tab-arrow buttons show/hide (Lloyd Williams) [783681].
 - Fixed lastlog bugs [791220].
 - win32: Faster tinting, and uses MMX when in 16 or 32bit color.
 - Execute /sigusr2 on receiving SIGUSR2 signal (Michael Guidero).
 - /IGNORE command and window now have an extra "DCC" category.
 - Alert user when logfiles fail to open (Jay Cornwall).
 - Fixed missing underlining of IP numbers (2.0.4 only).
 - Allow accepting DCC sends from ports below 1024.
 - Connect to URL given on commandline even if 'No Serverlist on
   Startup' is off [804648].
 - Fixed problem in allocating colors while in 8bit PseudoColor.
 - xtext: tinting now shades towards your background color, making it
   usable with white backgrounds. Tints can also use XShm for extra
   speed with --enable-shm at ./configure time (experimental).
 - Smaller bug fixes: [798655].


----------------------------------------------------------------------
 2.0.4